# public-directory-scraper

./: .env.example  .gitignore  DEV_LOG.md  README.md  pyproject.toml
sample_outputs/: books_sample.csv
src/public_directory_scraper/: __init__.py  __main__.py  cleaner.py  config.py  database.py  exporter.py  fetcher.py  loader.py  parser.py  pipeline.py  schema.py  scraper.py
tests/: test_books_fixture.py  test_cleaner.py  test_cli_entrypoint.py  test_config.py  test_database.py  test_exporter.py  test_fetcher.py  test_import.py  test_loader.py  test_parser.py  test_pipeline.py  test_postgres_integration.py  test_schema.py  test_scraper.py
tests/fixtures/: books_page.html  listings.html  simple_listing.html
tests/fixtures/catalogue/: page-2.html
