[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "public-directory-scraper"
version = "0.1.0"
description = "Small-step public directory scraper project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openpyxl"]

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
